--- a/cam/index.html
+++ b/cam/index.html
@@ -6,7 +6,7 @@
 		<title>pico.js: face detection in JavaScript</title>
 		<script src="camvas.js"></script>
 		<script src="../pico.min.js"></script> <!-- generated with https://jscompress.com/ -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
 	</head>
 	<script>
 		var initialized = false;
