--- a/examples/webcam.html
+++ b/examples/webcam.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>pico.js: face detection in JavaScript</title>
 		<script src="camvas.js"></script>
-		<script src="../pico.min.js"></script> <!-- generated with https://jscompress.com/ -->
+		<script src="../pico.js"></script>
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
 	</head>
 	<script>
